# axum-api

./: Cargo.toml  Makefile  build.rs
migrations/: 20220108_init.sql
src/: app.rs  main.rs
src/api/: mod.rs
src/utils/: mod.rs
